<resources>
    <string name="app_name">Grapevine</string>
    <string name="event_feed">Event Feed</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_new_account">New Account</string>
    <string name="create_account_email">Email</string>
    <string name="create_account_first_name">First Name</string>
    <string name="create_account_last_name">Last Name</string>
    <string name="create_account_username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="general_login_error">Oh no! There was a problem logging in.</string>
    <string name="event_request_error">There was an error retrieving events from the server.</string>
    <string name="title_activity_calendar_view">CalendarView</string>
    <string name="calendar_view">Calendar</string>
    <string name="title_activity_view_event">Event</string>
    <string name="auth_failure_message">You entered an incorrect username or password. Please try again.</string>
    <string name="account_exists">An account already exists with that username. Please choose another.</string>
    <string name="register_user_success">Account created</string>
    <string name="register_user_general_error">Whoops. There was a problem registering account. Please try again later.</string>
    <string name="event_list_empty">It looks like there are no events in your grapevine. Try adding some groups and we\'ll tell you what they\'ve planned :)</string>
    <string name="add_group">Add</string>
    <string name="title_activity_manage_feeds">Feed Management</string>
    <string name="add_group_hint">Feed name</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="event_error">There was an error fetching your events from the server.</string>
    <string name="add_feed">Add feed</string>
    <string name="following">My feeds</string>
    <string name="follow_feed_error">There was an error following this feed.</string>
    <string name="refresh_error_toast">There was an error retrieving new events</string>
    <string name="refresh_success_toast">Successfully refreshed event feed</string>
    <string name="refresh">Refresh</string>
    <string name="untitled_event_title">Untitled event</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="no_post_content_message">We were unable to display the original post here :(</string>
    <string name="unfollow_feed">Unfollow</string>
    <string name="cancel">Cancel</string>
    <string name="unfollow_error">Whoops. There was a problem trying to unfollow the feed.</string>
    <string name="multi_day">multi-day</string>
    <string name="view_original_post">View original post</string>
    <string name="no_feeds_message">You don\'t currently follow any feeds. Add some above to start getting events!</string>
    <string name="create_account">Create Account</string>
    <string name="my_upcoming_events">Upcoming Events</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings">Settings</string>
    <string name="account_settings">Account settings</string>
    <string name="app_logout">Logout</string>
    <string name="app_logout_dialog_title">Logout?</string>
    <string name="app_logout_confirmation">Are you sure you want to log out?</string>
    <string name="logout_positive">Yes</string>
    <string name="logout_negative">Cancel</string>
    <string name="version">Version</string>
    <string name="licenses">Licenses</string>
    <string name="licenses_summary">We\'ve gotta give credit where it\'s due</string>
    <string name="title_activity_view_licenses">Licenses</string>
    <string name="license_description">Grapevine relies on some really great open source software to
        do what it does. In order to integrate these packages with our own software, we are required to provide a copy of their
        licenses.  Obligation aside, we are grateful for the following contributions:
    </string>
    <string name="caldroid_license">
        Available for use under the MIT License

Copyright (&#169;) 2013 by Roomorama Inc.

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
    </string>
    <string name="infinite_view_pager_license">
        Copyright (&#169;) 2012 Antony Tran

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
    </string>
    <string name="date4j_license">
        Copyright (&#169;) 2010-2013 Hirondelle Systems All rights reserved.

Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:

 * Redistributions of source code must retain the above copyright
   notice, this list of conditions and the following disclaimer.
 * Redistributions in binary form must reproduce the above copyright
   notice, this list of conditions and the following disclaimer in the
   documentation and/or other materials provided with the distribution.
 * Neither the name of Hirondelle Systems nor the
   names of its contributors may be used to endorse or promote products
   derived from this software without specific prior written permission.
THIS SOFTWARE IS PROVIDED BY HIRONDELLE SYSTEMS \'\'AS IS\'\' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL HIRONDELLE SYSTEMS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
    </string>
    <string name="forgot_password_2">Forgot your password?</string>
    <string name="forgotten_password_description">No worries! Just enter your email address and we\'ll send you an email with instructions on how to reset your password.</string>
    <string name="forgotten_password_hint">Email Address</string>
</resources>