<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="cs.lmu.grapevine.activities.FollowFeed">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_feed"
        android:gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_group_hint"
        android:textSize="@dimen/radio_button_size"
        android:id="@+id/feed_name"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/social_media_options">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            android:textSize="@dimen/radio_button_size"
            android:textColor="@color/facebook"
            android:onClick="toggleButtonIfInputsValid"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twitter"
            android:textSize="@dimen/radio_button_size"
            android:textColor="@color/twitter"
            android:onClick="toggleButtonIfInputsValid"/>
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_group"
        android:onClick="addGroupIfValid"
        android:id="@+id/add_feed_button"
        android:enabled="false"/>
    <ProgressBar
        android:id="@+id/follow_feed_progress"
        style="@android:style/Widget.ProgressBar.Small"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:visibility="invisible"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/follow_feed_error"
        android:textColor="@color/red"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/following"
        android:gravity="center"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

    </ListView>
</LinearLayout>
