<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="cs.lmu.grapevine.activities.ManageFeeds">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_feed"
        android:textSize="@dimen/section_title"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_group_hint"
        android:textSize="@dimen/radio_button_size"
        android:id="@+id/feed_name"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/social_media_options">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            android:textSize="@dimen/radio_button_size"
            android:textColor="@color/facebook"
            android:onClick="toggleButtonIfInputsValid"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twitter"
            android:textSize="@dimen/radio_button_size"
            android:textColor="@color/twitter"
            android:onClick="toggleButtonIfInputsValid"/>
    </RadioGroup>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_group"
        android:onClick="addGroupIfValid"
        android:id="@+id/add_feed_button"
        android:enabled="false"/>
    <ProgressBar
        android:id="@+id/follow_feed_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="@dimen/progress_spinner_size"
        android:layout_height="@dimen/progress_spinner_size"
        android:layout_gravity="center"
        android:visibility="invisible"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/feed_error_message"
        android:textColor="@color/red"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/following"
        android:textSize="@dimen/section_title"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/no_feeds_message"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/currently_following">
    </ListView>
</LinearLayout>
